garde_tests/tests/ui/compile-pass/email.rs
#[derive(garde::Validate)]
struct Test<'a> {
    #[garde(email)]
    field: &'a str,
}

fn main() {}
