garde_tests/tests/ui/compile-fail/unknown_attr.rs
#[derive(garde::Validate)]
#[garde(unknown_attr)]
struct Test {}

fn main() {}
